# kiara.documentation

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  Topic Modelling Draft.ipynb  environment.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  versions.json
.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml
0.4.0/info/module_types/: index.html
0.4.0/reference/SUMMARY/: index.html
0.4.0/usage/: index.html
0.4.0/usage/getting_started/: index.html
0.4.0/workflows/: topic_modeling.ipynb
0.4.25/extending_kiara/SUMMARY/: index.html
0.4.25/extending_kiara/advanced/: index.html
0.4.25/info/module_types/: index.html
0.4.25/search/: search_index.json
0.4.25/usage/: index.html
ci/conda/: conda-pkg-patch.yaml
doc_drafts/development/: data_operations.md
doc_drafts/modules/: pipeline_modules.md
doc_drafts/usage/: data.md
docs/: .pages  SUMMARY.md  index.md  installation.md
docs/concepts/: index.md  modules.md
docs/drafts/: .pages  kiara_information_items.ipynb
docs/extending_kiara/: SUMMARY.md  index.md
docs/pipelines/: index.md
docs/usage/: getting_started.md  running_modules.md  writing_modules_guide.md
docs/workflows/: index.md  topic_modeling.ipynb
docs/workshop/: Topic_Modelling.ipynb  workshop.ipynb
examples/pipelines/: tutorial_1.yaml  tutorial_2.yaml  tutorial_3.yaml  tutorial_4.yaml
examples/presentations/: lumy.ipynb
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/SUMMARY/: index.html
latest/extending_kiara/: index.html
latest/installation/: index.html
latest/search/: search_index.json
latest/usage/: index.html
latest/workflows/: index.html  xor.ipynb
overrides/: main.html
scripts/documentation/: gen_info_pages.py  gen_module_doc.py  gen_operation_type_pages.py  operation_type_template.md
src/kiara_documentation/: __init__.py  kiara_documentation.py  metadata_schemas.py  value_types.py  writing_modules.py
stable/extending_kiara/: index.html
stable/installation/: index.html
stable/workflows/: index.html
tests/: conftest.py  test_kiara_modules_default.py
(+86 files in other folders)
