[build-system]
requires = [
    "setuptools>=63",
    "setuptools_scm[toml]>7.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "kiara_plugin.documentation"
description = "Kiara user documentation."
authors = [
    {name = "Markus Binsteiner", email = "markus@frkl.io"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["kiara"]
license = {text = "MPL-2.0"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "kiara>=0.4.22",
    "kiara_plugin.network_analysis>=0.4.5",
    "icecream>=2.1.0",
    "mike>=1.0.1",
    "mkdocs-awesome-pages-plugin>=2.5.0",
    "mkdocs-literate-nav>=0.4.0",
    "mkdocs-macros-plugin>=0.7.0",
    "mkdocs-material>=8.0.0",
    "mkdocs-section-index>0.3.0",
    "mkdocstrings-python-legacy",
    "mknotebooks>=0.7.0",
    "mkdocs-gen-files>=0.3.1"
]
dynamic = ["version"]

[project.optional-dependencies]
dev_documentation = [
    "kiara[dev_documentation]"
]
dev_testing = [
    "kiara[dev_testing]",
    "types-setuptools",
    "sqlalchemy-stubs"
]
dev_utils = [
    "kiara[dev_utils]"
]
dev_all = [
    "kiara[dev_all]"
]

[project.urls]
homepage = "https://github.com/DHARPA-Project/kiara_plugin.documentation"
documentation = "https://DHARPA-Project.github.io/kiara_plugin.documentation"
repository = "https://github.com/DHARPA-Project/kiara_plugin.documentation"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | external
)/
'''

[tool.setuptools_scm]
write_to = "src/kiara_plugin/documentation/version.txt"
